[project]
name = "ea-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscrt>=0.31.2",
    "boto3>=1.42.71",
    "gymnasium>=0.29.1",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "accelerate>=1.13.0",
]

[tool.uv.workspace]
members = [
    "ea-game",
]
